# sztsc

./: Cargo.toml  README.md
clipboard/: Cargo.toml
clipboard/examples/: simple.rs
clipboard/src/: lib.rs
libfreerdp/: Cargo.toml  build.rs
libfreerdp-sys/: Cargo.toml  build.rs  wrapper.h
libfreerdp/src/: callbacks.rs  channel.rs  cliprdr_client_context.rs  disp_client_context.rs  dvc.rs  freerdp.rs  gdi.rs  lib.rs  ptr_flags.rs  pubsub.c  pubsub.rs  rdp_context.rs  rdp_input.rs  settings.rs  trampolines.c  trampolines.rs
sztsc/: Cargo.toml
sztsc-authcode/: Cargo.toml
sztsc-authcode/src/: main.rs
sztsc/src/: frame_buffer.rs  main.rs
sztsc/src/event/: mod.rs
sztsc/src/event/ui/: mod.rs
sztsc/src/rdp/: auth.rs  event.rs  mod.rs  remote_desktop.rs  run.rs  scancode.rs
sztsc/src/ui/: app.rs  inhibitor.rs  mod.rs
