[package]
name = "sztsc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
eventfd = "0.2.0"
libfreerdp = { path = "../libfreerdp" }
percent-encoding = "2.3.2"
reqwest = { version = "0.13.2", features = ["blocking", "form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
softbuffer = "0.4.8"
thiserror = "2.0.18"
url = "2.5.8"
winit = "0.30.13"
